# rocket

./: .appveyor.yml  .editorconfig  .gitignore  .mailmap  .travis.yml  CONTRIBUTING.md  Gruntfile.js  LICENSE-MIT  LICENSE.TXT  LICENSE.txt  Makefile  README  README.md  appveyor.yml  client.cpp  editor.sln  example.cpp  example_bass.cpp  example_null.cpp  examples.sln  examples.vs2008.sln  examples.vs2013.sln  grunt.js  meson.build  meson_options.txt  network.cpp  network.h  package.json  qt-editor.sln  resource.h  rocket.sln  stdafx.h  sync_player.vcproj  sync_player_vs2008.vcproj  syncdata.h  syncdataclient.cpp  syncdataclient.h  synceditdata.h  synctracker2.cpp  synctracker2.rc  (+7 more)
.github/workflows/: ci.yml
contrib/: example_bass.cpp  sync-cpp.h
contrib/DotRocket/: DotRocket.sln
contrib/DotRocket/DotRocket/: AssemblyInfo.cpp  DotRocket.cpp  DotRocket.h  DotRocket.vcproj  Stdafx.cpp
contrib/DotRocket/DotRocketClient/: AssemblyInfo.cpp  DotRocketClient.cpp  DotRocketClient.h  DotRocketClient.vcproj  Stdafx.cpp
contrib/DotRocket/example/: Program.cs  example.csproj  tune.xwma
contrib/DotRocket/example/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
doc/: INSTALL-ubuntu.md
editor/: .gitignore  afxres.h  appicon.icns  clientsocket.cpp  clientsocket.h  editor.cpp  editor.pro  editor.qrc  editor.rc  editor.vcproj  editor_vs2005.vcproj  editor_vs2008.vcproj  inifile.cpp  inifile.h  mainwindow.cpp  mainwindow.h  meson.build  recentfiles.cpp  recentfiles.h  resource.h  rocket.ini  stdafx.cpp  stdafx.h  syncclient.cpp  syncclient.h  syncdocument.cpp  syncdocument.h  synceditdata.h  syncpage.cpp  syncpage.h  synctrack.h  synctracker2.cpp  tests.pro  trackview.cpp  trackview.h  tst_syncdocument.cpp
example/: cube.rocket  index.html
example/_common/: timer.js
example/threeJS_Cube/: cube.rocket  index.html
example/threeJS_Cube_with_sound/: index.html
example_bass/: example_bass.cpp  example_bass.vcproj  example_bass.vs2013.vcxproj  example_bass_vs2005.vcproj  example_bass_vs2008.sln  example_bass_vs2008.vcproj  packages.config
examples/: .gitignore  example_bass.cpp  example_bass.rocket  example_bass.vs2013.vcxproj  example_bass.vs2013.vcxproj.filters  meson.build  packages.config
js/: Gruntfile.js  README.md  package.json
js/example/: bower.json  index.html
js/src/: jsRocket.js  syncdevice.js  syncdeviceplayer.js  synctrack.js
lib/: base.h  data.c  data.h  device.c  device.h  librocket.vcproj  librocket.vs2008.vcproj  librocket.vs2013.vcxproj  librocket.vs2013.vcxproj.filters  meson.build  sync.h  tcp.c  track.c  track.h
qt-editor/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-editor.rc  qt-editor.vcproj  trackview.cpp  trackview.h
src/: syncdata.js  syncdevice.js  syncdeviceclient.js  syncdeviceplayer.js  synctrack.js
src/websockifyDependency/: util.js  websock.js
subprojects/: bass-darwin.wrap  bass-linux.wrap  bass-windows.wrap
subprojects/packagefiles/bass/: meson.build
sync/: base.h  data.c  data.cpp  data.h  device.c  device.cpp  device.h  device_client.cpp  device_player.cpp  network.cpp  network.h  sync.h  track.c  track.cpp  track.h
usync/: example.c  usync.c  usync.h
